compiler/tests/success/subarrays/x86-64/merge_if.jazz
export fn main () -> reg u64 {
  reg u64 res tmp;
  stack u64[10] s;
  reg ptr u64[5] r;
  res = 0;

  if (res >= 0) {
    tmp = 2;
  } else {
    tmp = 0;
  }
  r = s[tmp:5];
  res = r[0];

  return res;
}
