compiler/tests/fail/array_expansion/x86-64/whole_array_lv.jazz
fn f (reg ptr u64[4] r) -> reg ptr u64[4] {
  return r;
}

export fn main () -> reg u64 {
  stack u64[4] s;
  reg u64[4] r;
  reg u64 res;

  // makeReferenceArguments introduces an equality
  // r = regptr;
  // which is rejected
  r = f(s);

  return res;
}
